fixed image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ body{
 .hero-image img, svg{
     width: 100%;
 }
+.hero-image svg{
+    height: 17rem;
+}
 .hero-text{
 
     padding-top: 5rem;
@@ -176,7 +179,9 @@ footer a{
 /*  Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
   
-
+    .hero-image svg{
+        height: auto;
+    }
 }
 
 /*  X-Large devices (large desktops, 1200px and up) */
